--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "deprecated-react-native-prop-types": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.0",
+    "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-snap-carousel": "^3.9.1"
